# OneBotCodexCompanion

./: .gitignore  AppSettings.cs  CdpDiscovery.cs  CdpMonitor.cs  MainForm.cs  OneBotClient.cs  Program.cs  README.md  SessionMonitor.cs  SettingsStore.cs  ThreadTitleResolver.cs  UiControls.cs  app.manifest
.github/workflows/: release.yml
native-eui/: .gitignore  CMakeLists.txt  README.md  app.cpp  autostart.cpp  autostart.h  notification_service.cpp  notification_service.h  onebot_client.cpp  onebot_client.h  session_monitor.cpp  session_monitor.h  settings_store.cpp  settings_store.h
